--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="./style.css">
+		<link rel="stylesheet" href="style.css">
 		<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script src="./app.js"></script>
+		<script src="app.js"></script>
 	</head>
 	<body>
 		<section class="main">
